# zenus

./: .gitignore  API.md  README.md  SERVER.md  biome.json  cursor.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: window-operations.json
src-tauri/icons/: icon.icns
src-tauri/src/: headless.rs  lib.rs  main.rs
src/components/: editorContent.tsx  file-menu.tsx  mode-toggle.tsx  previewModal.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx
src/hooks/: useTheme.ts
src/utils/: wiki-link-extension.ts
