[package]
name = "zenus"
version = "0.2.4"
description = "A beautiful note-taking app"
authors = ["you"]
edition = "2021"
default-run = "zenus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "zenus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zenus-headless"
path = "src/headless.rs"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
tauri = { version = "2", features = [], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }

[features]
default = ["tauri-deps"]
tauri-deps = ["tauri", "tauri-plugin-opener", "tauri-build"]

